fix panel z-index

--- a/docs/css/metro.css
+++ b/docs/css/metro.css
@@ -10423,7 +10423,7 @@ input[type="submit"].link:active {
 }
 .panel > .content {
   background-color: #e8f1f4;
-  z-index: 1;
+  z-index: auto;
   font-size: 0.875rem;
 }
 .panel.collapsible > .heading {
