--- a/less/panels.less
+++ b/less/panels.less
@@ -52,7 +52,7 @@
 	& > .content {
 		//padding: .625rem;
 		background-color: #e8f1f4;
-		z-index: 1;
+		z-index: auto;
 		.text-default;
 	}
 
